--- a/app/package.json
+++ b/app/package.json
@@ -5,12 +5,15 @@
   "main": "./dist/main.js",
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "vue": "^2.1.10",
+    "iconv-lite": "^0.4.15",
     "vue-electron": "^1.0.6",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.2",
     "vuex": "^2.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "vue": "^2.2.6",
+    "iview": "^2.0.0-rc.10"
+  },
   "author": "linjianhang@centerm.com <linjianhang@centerm.com>"
 }
